--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li> Practica 1:<a href="#">Servidor Web </a></li>
       <li>Practica 2:<a href="prac/index.html" target="blanck">CSS </a></li>
       <li>Practica 3:<a href="#">JSON</a></li>
-      <li>Practica 4:<a href="#">API</a></li>
+      <li>Practica 4:<a href="Practica4/index.html" target="blank">API</a></li>
       <li>Proyecto Web:<a href="prac/index.html" target="blanck">Avance 1 </a></li>
       <li>Proyecto Web:<a href="#">Avance 2 </a></li>
       <li>Proyecto Web:<a href="#">Avance 3 </a></li>
