--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Proyecto Web:<a href="prac/index.html" target="blanck">Avance 1 </a></li>
       <li>Proyecto Web:<a href="#">Avance 2 </a></li>
       <li>Proyecto Web:<a href="#">Avance 3 </a></li>
-      <li>Proyecto Web:<a href="PROYECFIN/index.html">Final </a></li>
+      <li>Proyecto Web:<a href="PROYECFIN/index.html" target="blanck">Final </a></li>
     </ul>
     
   </main> 
